# bioacoustic-species-detection

./: README.md  pyproject.toml
notebooks/: 00-data_sandbox.ipynb  01-data-analysis.ipynb  01-eda.ipynb  02-build_features.ipynb  03-fit_models.ipynb
results/features/: X_train.pkl  data_train.pkl  data_train_soundscapes.pkl
src/bioacoustics/: data.py  features.py  preprocessing.py  visualization.py
